# kii-readiness-mapper

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LEGAL.md  README.md  README.ru.md  pyproject.toml
.github/workflows/: ci.yml  security.yml
scripts/: lint.sh  perf_check.sh  security_scan.sh
src/kii_readiness_mapper/ai/: base.py  infra_text_parser.py  narrative_reporter.py
src/kii_readiness_mapper/assessment/: controls_checker.py  gaps_prioritizer.py  kii_category_estimator.py  kii_subject_detector.py  summary_builder.py
src/kii_readiness_mapper/cli/: main.py
src/kii_readiness_mapper/cli/commands/: assess_profile.py  generate_report.py  init_profile.py  run_cli_survey.py  run_web_survey.py
src/kii_readiness_mapper/config/: loader.py
src/kii_readiness_mapper/config/examples/: small_clinic.yaml
src/kii_readiness_mapper/domain/: enums.py  models.py
src/kii_readiness_mapper/questionnaire/: loader.py  model.py  scoring.py
src/kii_readiness_mapper/questionnaire/banks/: common.yaml  sector_health.yaml  system_types.yaml
src/kii_readiness_mapper/report/: html_report.py  markdown_report.py
src/kii_readiness_mapper/survey/: cli_survey.py  web_survey.py
tests/integration/: test_full_flow_bank_profile_to_report.py  test_full_flow_clinic_text_to_report.py
tests/unit/: test_ai_stubs.py  test_config_loader.py  test_controls_checker.py  test_gaps_prioritizer.py  test_kii_category_estimator.py  test_kii_subject_detector.py  test_markdown_report.py  test_questionnaire_loader.py  test_scoring_basic.py
